# research-assistant

./: .env.example  README.md  main.py  pyproject.toml
app/: __init__.py
app/api/: routes.py
app/core/: storage.py  summarizer.py
app/core/extractors/: arxiv.py  hal.py
app/utils/: helper.py
config/: setting.py
web-ui/: package.json
web-ui/src/: App.css  App.jsx
